[package]
name = "tasci"
version = "0.1.0"
authors = ["luxn"]

[dependencies]
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
serde_cbor = "0.9.0"

actix = "0.7.4"
actix-web = "0.7.4"

bcrypt = "0.2.0"
handlebars = "1.0.3"
markdown = "0.2.0"
lettre = "0.8.2"
lettre_email = "0.8"
jsonwebtoken = "5.0.0"

uuid = "0.6.5"
regex = "1"
rand = "0.5.5"
log = "0.4.5"
