[package]
name = "tasci"
version = "0.1.0"
authors = ["luxn"]
edition = "2018"

[dependencies]
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.33"
serde_cbor = "0.9.0"
serde_yaml = "0.8.8"

actix = "0.7.9"
actix-web = "0.7.17"

bcrypt = "0.2.1"
handlebars = "1.1.0"
markdown = "0.2.0"
lettre = "0.8.3"
lettre_email = "0.8.3"
jsonwebtoken = "5.0.1"

uuid = "0.7.1"
regex = "1.1.0"
rand = "0.6.1"
log = "0.4.6"
chrono = { version = "0.4.6", features = ["serde"] }
geo = "0.11.0"
snowflake = { version = "1.3", features = ["serde_support"] }

diesel = { version = "1.3.3", features = ["postgres"] }
dotenv = "0.13.0"
